--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,16 @@
         },
         "@babel/preset-react"
       ]
+    ],
+    "plugins":[
+      [
+        "module-resolver",
+        {
+          "alias":{
+            "@src":"./src",
+            "@lib":"./lib"
+          }
+        }
+      ]
     ]
   }
