--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "happypack": "^5.0.1",
     "koa": "^2.12.0",
     "lodash": "^4.17.15",
+    "nsploadable": "0.0.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
