--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cross-env": "^7.0.2",
     "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
