--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.12.0",
     "lodash": "^4.17.15",
     "nsploadable": "0.0.2",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
