--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,38 @@
 {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-            "targets": {
-                "browsers": ["IE >= 9"]
-              }
-        },
-        "@babel/preset-react"
-      ]
-    ],
-    "plugins":[
-      [
-        "module-resolver",
-        {
-          "alias":{
-            "@src":"./src",
-            "@lib":"./lib"
-          }
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": ["IE >= 9"]
         }
-      ]
-    ]
-  }
+        // "corejs": "3",
+        // "useBuiltIns": "usage"
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "@src": "./src",
+          "@lib": "./lib",
+          "@build": "./build",
+          "@service": "./service",
+          "@config": "./config"
+        }
+      }
+    ],
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "nsploadable/babel",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties"
+  ]
+}
