--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "koa": "^2.12.0",
     "lodash": "^4.17.15",
     "nsploadable": "0.0.2",
-    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -26,12 +25,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/register": "^7.10.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.4",
+    "ramda": "^0.27.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
